@@ -5,6 +5,8 @@ Revision history for DBIx::Class
           sets quote_char and name_sep appropriate for your RDBMS
         - Add retrieve_on_insert column info flag, allowing to retrieve any
           column value instead of just autoinc primary keys
+        - Allow specification of some runtime relationship options (see
+          DBIx::Class::ResultSet/relationship_options)
         - All limit dialects (except for the older Top and FetchFirst) are
           now using bind parameters for the limits/offsets, making DBI's
           prepare_cached useful across paged resutsets
